@@ -146,5 +146,11 @@ LocalSubMatch::open_post_list(const string& term, double max_part)
 	i->second.termweight += max_part;
     }
 
+    if (max_part == 0.0 && db->get_termfreq(term) == db->get_doccount()) {
+	// If we're not going to use the wdf and the term indexes all
+	// documents, we can replace it with the MatchAll postlist, which
+	// is especially efficient if there are no gaps in the docids.
+	RETURN(db->open_post_list(string()));
+    }
     RETURN(db->open_post_list(term));
 }
